Add text field option for URL

--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,16 @@
     "permissions": [
         "notifications",
         "tabs",
-        "background"
+        "background",
+        "storage"
     ],
 
     "background": {
-        "scripts": [
-            "background.js"
-        ]
+        "service_worker": "background.js"
+    },
+
+    "options_ui": {
+        "page": "options.html",
+        "open_in_tab": false
     }
 }
