--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,24 @@
 {
-    "manifest_version": 3,
+  "manifest_version": 3,
 
-    "name": "Sound Detector",
-    "description": "Detects sounds from specified browser tabs and notifies you about it.",
-    "version": "0.1.0",
+  "name": "Sound Detector",
+  "description": "Detects sounds from specified browser tabs and notifies you about it.",
+  "version": "0.1.0",
 
-    "permissions": [
-        "notifications",
-        "tabs",
-        "background",
-        "storage"
-    ],
+  "icons": {
+    "16": "icon.png",
+    "32": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
+  },
+  "permissions": ["notifications", "tabs", "storage"],
 
-    "background": {
-        "service_worker": "background.js"
-    },
+  "background": {
+    "service_worker": "background.js"
+  },
 
-    "options_ui": {
-        "page": "options.html",
-        "open_in_tab": false
-    }
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  }
 }
